MyParser.java
/* MyParser.java */
/* Generated By:JavaCC: Do not edit this line. MyParser.java */
import java.util.List;
import java.util.LinkedList;
import java.util.ArrayList;

import syntaxtree.*;
import syntaxtree.visitor.*;
import Frame.Frame;
import Translate.IRTreeVisitor;
import Translate.ProcFrag;
import Tree.Stm;
import Mips.MipsFrame;
import Canon.*;

public class MyParser implements MyParserConstants {
    public static void main(String[] args) throws ParseException {
        try {
            MyParser parser = new MyParser(System.in);
            Program ast = parser.Program();
            System.out.println("Built AST");

            //System.out.println("AST:");
            //System.out.println(ast.accept(new PrettyPrintVisitor()));

            TypeTreeBuilder builder = new TypeTreeBuilder();
            ast.accept(builder);
            if (builder.error.anyErrors) {
                throw new Exception("Error building AST");
            }

            TypeChecker typeChecker = new TypeChecker(builder.tree);
            ast.accept(typeChecker);
            if (typeChecker.error.anyErrors) {
                throw new Exception("Semantic errors found");
            }
            System.out.println("No semantic errors");

            Frame frame = new MipsFrame();
            IRTreeVisitor treeVisitor = new IRTreeVisitor(frame, typeChecker);
            ast.accept(treeVisitor);

            LinkedList<ProcFrag> frags = treeVisitor.getResult();
            List<TraceSchedule> traceList = new ArrayList<TraceSchedule>();
            for (ProcFrag frag : frags) {

                for (Stm stm : frag.body) {

                    traceList.add(new TraceSchedule(new BasicBlocks(Canon.linearize(stm))));

                }

            }

            System.out.println("Intermediate code generation completed successfully.");

            // System.out.println("IR Tree:");
            // Tree.Print irPrinter = new Tree.Print(System.out);
            // for (TraceSchedule schedule : traceList) {
            //     Tree.StmList current = schedule.stms;
            //     while (current != null) {
            //         irPrinter.prStm(current.head);
            //         current = current.tail;
            //     }
            //     System.out.println();
            // }

        } catch (TokenMgrError e) {
            System.err.println("Error analyzing input: " + e.getMessage());
        } catch (ParseException e) {
            System.err.println("Parse error: " + e.getMessage());
        } catch (Exception e) {
            System.err.println("Error: " + e.getMessage());
        }
    }

  static final public Program Program() throws ParseException {MainClass m;
    ClassDeclList cl = new ClassDeclList();
    ClassDecl c;
    m = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = ClassDecl();
cl.add(c);
    }
    jj_consume_token(0);
{if ("" != null) return new Program(m, cl);}
    throw new Error("Missing return statement in function");
}

  static final public MainClass MainClass() throws ParseException {Identifier i1, i2;
    Statement s;
    Token t1, t2;
    jj_consume_token(CLASS);
    t1 = jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAR);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    t2 = jj_consume_token(IDENTIFIER);
    jj_consume_token(RPAR);
    jj_consume_token(LBRACE);
    s = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
{if ("" != null) return new MainClass(new Identifier(t1.image), new Identifier(t2.image), s);}
    throw new Error("Missing return statement in function");
}

  static final public ClassDecl ClassDecl() throws ParseException {Identifier i, j;
    VarDeclList vl = new VarDeclList();
    MethodDeclList ml = new MethodDeclList();
    VarDecl v;
    MethodDecl m;
    Token t1, t2;
    if (jj_2_1(3)) {
      jj_consume_token(CLASS);
      t1 = jj_consume_token(IDENTIFIER);
      jj_consume_token(LBRACE);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case BOOLEAN:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        v = VarDeclaration();
vl.add(v);
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PUBLIC:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        m = MethodDeclaration();
ml.add(m);
      }
      jj_consume_token(RBRACE);
{if ("" != null) return new ClassDeclSimple(new Identifier(t1.image), vl, ml);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        jj_consume_token(CLASS);
        t1 = jj_consume_token(IDENTIFIER);
        jj_consume_token(EXTENDS);
        t2 = jj_consume_token(IDENTIFIER);
        jj_consume_token(LBRACE);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INT:
          case BOOLEAN:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[3] = jj_gen;
            break label_4;
          }
          v = VarDeclaration();
vl.add(v);
        }
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case PUBLIC:{
            ;
            break;
            }
          default:
            jj_la1[4] = jj_gen;
            break label_5;
          }
          m = MethodDeclaration();
ml.add(m);
        }
        jj_consume_token(RBRACE);
{if ("" != null) return new ClassDeclExtends(new Identifier(t1.image), new Identifier(t2.image), vl, ml);}
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public VarDecl VarDeclaration() throws ParseException {Type t;
    Token id;
    t = Type();
    id = jj_consume_token(IDENTIFIER);
    jj_consume_token(SCOLON);
{if ("" != null) return new VarDecl(t, new Identifier(id.image));}
    throw new Error("Missing return statement in function");
}

  static final public MethodDecl MethodDeclaration() throws ParseException {Type t;
    Token id;
    FormalList fl;
    VarDeclList vl = new VarDeclList();
    StatementList sl = new StatementList();
    Exp e;
    VarDecl v;
    Statement s;
    jj_consume_token(PUBLIC);
    t = Type();
    id = jj_consume_token(IDENTIFIER);
    jj_consume_token(LPAR);
    fl = FormalList();
    jj_consume_token(RPAR);
    jj_consume_token(LBRACE);
    label_6:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_6;
      }
      v = VarDeclaration();
vl.add(v);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case SYSTEM_OUT_PRINTLN:
      case IDENTIFIER:
      case LBRACE:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_7;
      }
      s = Statement();
sl.add(s);
    }
    jj_consume_token(RETURN);
    e = Expression();
    jj_consume_token(SCOLON);
    jj_consume_token(RBRACE);
{if ("" != null) return new MethodDecl(t, new Identifier(id.image), fl, vl, sl, e);}
    throw new Error("Missing return statement in function");
}

  static final public FormalList FormalList() throws ParseException {Formal f;
    Formal r;
    FormalList fl = new FormalList();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case BOOLEAN:
    case IDENTIFIER:{
      f = Formal();
fl.add(f);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_8;
        }
        r = FormalRest();
fl.add(r);
      }
{if ("" != null) return fl;}
      break;
      }
    default:
      jj_la1[8] = jj_gen;
{if ("" != null) return fl;}
    }
    throw new Error("Missing return statement in function");
}

  static final public Formal Formal() throws ParseException {Type t;
    Token id;
    t = Type();
    id = jj_consume_token(IDENTIFIER);
{if ("" != null) return new Formal(t, new Identifier(id.image));}
    throw new Error("Missing return statement in function");
}

  static final public Formal FormalRest() throws ParseException {Type t;
    Token id;
    jj_consume_token(COMMA);
    t = Type();
    id = jj_consume_token(IDENTIFIER);
{if ("" != null) return new Formal(t, new Identifier(id.image));}
    throw new Error("Missing return statement in function");
}

  static final public Type Type() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BOOLEAN:{
      t = jj_consume_token(BOOLEAN);
{if ("" != null) return new BooleanType();}
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      if (jj_2_3(2)) {
        t = jj_consume_token(INT);
        jj_consume_token(LBRACKET);
        jj_consume_token(RBRACKET);
{if ("" != null) return new IntArrayType();}
      } else if (jj_2_4(2)) {
        t = jj_consume_token(INT);
{if ("" != null) return new IntegerType();}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          t = jj_consume_token(IDENTIFIER);
{if ("" != null) return new IdentifierType(t.image);}
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public Statement Statement() throws ParseException {Statement s;
    Exp e1, e2, e3;
    Statement s1, s2;
    StatementList sl;
    Identifier id;
    Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACE:{
      jj_consume_token(LBRACE);
sl = new StatementList();
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:
        case WHILE:
        case SYSTEM_OUT_PRINTLN:
        case IDENTIFIER:
        case LBRACE:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_9;
        }
        s1 = Statement();
sl.add(s1);
      }
      jj_consume_token(RBRACE);
{if ("" != null) return new Block(sl);}
      break;
      }
    case IF:{
      jj_consume_token(IF);
      jj_consume_token(LPAR);
      e1 = Expression();
      jj_consume_token(RPAR);
      s1 = Statement();
      jj_consume_token(ELSE);
      s2 = Statement();
{if ("" != null) return new If(e1, s1, s2);}
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      jj_consume_token(LPAR);
      e1 = Expression();
      jj_consume_token(RPAR);
      s1 = Statement();
{if ("" != null) return new While(e1, s1);}
      break;
      }
    case SYSTEM_OUT_PRINTLN:{
      jj_consume_token(SYSTEM_OUT_PRINTLN);
      jj_consume_token(LPAR);
      e1 = Expression();
      jj_consume_token(RPAR);
      jj_consume_token(SCOLON);
{if ("" != null) return new Print(e1);}
      break;
      }
    case IDENTIFIER:{
      t = jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUAL:{
        jj_consume_token(EQUAL);
        e1 = Expression();
        jj_consume_token(SCOLON);
{if ("" != null) return new Assign(new Identifier(t.image), e1);}
        break;
        }
      case LBRACKET:{
        jj_consume_token(LBRACKET);
        e1 = Expression();
        jj_consume_token(RBRACKET);
        jj_consume_token(EQUAL);
        e2 = Expression();
        jj_consume_token(SCOLON);
{if ("" != null) return new ArrayAssign(new Identifier(t.image), e1, e2);}
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Exp Expression() throws ParseException {Exp e;
    e = ExpSmaller();
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  static final public Exp ExpSmaller() throws ParseException {Exp e1, e2;
    Token t;
    e1 = ExpAnd();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SMALLER:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_10;
      }
      t = jj_consume_token(SMALLER);
      e2 = ExpAnd();
e1 = new LessThan(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  static final public Exp ExpAnd() throws ParseException {Exp e1, e2;
    Token t;
    e1 = ExpPlusMinus();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LOGIC_AND:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_11;
      }
      t = jj_consume_token(LOGIC_AND);
      e2 = ExpPlusMinus();
e1 = new And(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  static final public Exp ExpPlusMinus() throws ParseException {Exp e1, e2;
    Token t;
    e1 = ExpMult();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        t = jj_consume_token(PLUS);
        e2 = ExpMult();
e1 = new Plus(e1, e2);
        break;
        }
      case MINUS:{
        t = jj_consume_token(MINUS);
        e2 = ExpMult();
e1 = new Minus(e1, e2);
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  static final public Exp ExpMult() throws ParseException {Exp e1, e2;
    Token t;
    e1 = ExpAccess();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULT:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_13;
      }
      t = jj_consume_token(MULT);
      e2 = ExpAccess();
e1 = new Times(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  static final public Exp ExpAccess() throws ParseException {Exp e1, e2;
    Identifier id;
    List<Exp> args;
    Token t;
    e1 = ExpUnary();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DOT:
      case LBRACKET:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_14;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACKET:{
        jj_consume_token(LBRACKET);
        e2 = Expression();
        jj_consume_token(RBRACKET);
e1 = new ArrayLookup(e1, e2);
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        if (jj_2_5(2)) {
          jj_consume_token(DOT);
          jj_consume_token(LENGTH);
e1 = new ArrayLength(e1);
        } else if (jj_2_6(2)) {
          jj_consume_token(DOT);
          t = jj_consume_token(IDENTIFIER);
          jj_consume_token(LPAR);
          args = ExpressionList();
          jj_consume_token(RPAR);
e1 = new Call(e1, new Identifier(t.image), new ExpList(args));
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  static final public Exp ExpUnary() throws ParseException {Exp e;
    Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LOGIC_NOT:{
      jj_consume_token(LOGIC_NOT);
      e = ExpUnary();
{if ("" != null) return new Not(e);}
      break;
      }
    case LPAR:{
      jj_consume_token(LPAR);
      e = Expression();
      jj_consume_token(RPAR);
{if ("" != null) return e;}
      break;
      }
    case NEW:{
      jj_consume_token(NEW);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        jj_consume_token(INT);
        jj_consume_token(LBRACKET);
        e = Expression();
        jj_consume_token(RBRACKET);
{if ("" != null) return new NewArray(e);}
        break;
        }
      case IDENTIFIER:{
        t = jj_consume_token(IDENTIFIER);
        jj_consume_token(LPAR);
        jj_consume_token(RPAR);
{if ("" != null) return new NewObject(new Identifier(t.image));}
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    case INTEGER_LITERAL:{
      t = jj_consume_token(INTEGER_LITERAL);
{if ("" != null) return new IntegerLiteral(Integer.parseInt(t.image));}
      break;
      }
    case TRUE:{
      jj_consume_token(TRUE);
{if ("" != null) return new True();}
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
{if ("" != null) return new False();}
      break;
      }
    case THIS:{
      jj_consume_token(THIS);
{if ("" != null) return new This();}
      break;
      }
    case IDENTIFIER:{
      t = jj_consume_token(IDENTIFIER);
{if ("" != null) return new IdentifierExp(t.image);}
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public List<Exp> ExpressionList() throws ParseException {List<Exp> l = new ArrayList<>();
    Exp e;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case LOGIC_NOT:
    case IDENTIFIER:
    case INTEGER_LITERAL:
    case LPAR:{
      e = Expression();
l.add(e);
      label_15:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[23] = jj_gen;
          break label_15;
        }
        jj_consume_token(COMMA);
        e = Expression();
l.add(e);
      }
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      ;
    }
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_3_3()
 {
    if (jj_scan_token(INT)) return true;
    if (jj_scan_token(LBRACKET)) return true;
    return false;
  }

  static private boolean jj_3_2()
 {
    if (jj_3R_VarDeclaration_183_5_16()) return true;
    return false;
  }

  static private boolean jj_3R_Type_244_5_18()
 {
    if (jj_scan_token(BOOLEAN)) return true;
    return false;
  }

  static private boolean jj_3R_Type_244_5_17()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_Type_244_5_18()) {
    jj_scanpos = xsp;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3R_Type_247_7_19()) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3_1()
 {
    if (jj_scan_token(CLASS)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    if (jj_scan_token(LBRACE)) return true;
    return false;
  }

  static private boolean jj_3_6()
 {
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }

  static private boolean jj_3_5()
 {
    if (jj_scan_token(DOT)) return true;
    if (jj_scan_token(LENGTH)) return true;
    return false;
  }

  static private boolean jj_3R_VarDeclaration_183_5_16()
 {
    if (jj_3R_Type_244_5_17()) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }
